--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,3 +65,57 @@ body {
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
+
+.center {
+  margin: auto;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+
+.p-6 {
+  padding: 6px;
+}
+
+.p-20 {
+  padding: 20px;
+}
+
+.w-70 {
+  width: 70vw;
+}
+
+.w-80 {
+  width: 80vw;
+}
+
+.btn-wide {
+  width: 100%;
+  color: green;
+}
+
+.vh-35 {
+  height: 35vh;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  padding-top: 5vh;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  border: 1px solid #888;
+}
