--- a/client/src/App.css
+++ b/client/src/App.css
@@ -230,4 +230,17 @@ div {
   font-size: 1.2em;
   font-weight: 500;
   color: #a2acac;
+  margin-bottom: 5px;
+}
+
+.holiday-date-title {
+  color: #4a90e2;
+}
+
+.go {
+  color: green;
+}
+
+.stop {
+  color: red;
 }
