--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -73,6 +78,14 @@ body {
 .mt-b-2 {
   margin-top: 2px;
   margin-bottom: 2px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
 }
 
 .mt-20 {
@@ -251,4 +264,18 @@ div {
 
 .buisness-cal-title {
   margin-bottom: 10px;
+}
+.map-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.map-wrapper {
+  height: 80vh;
+  width: 80vw;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
