--- a/client/src/App.css
+++ b/client/src/App.css
@@ -267,18 +267,19 @@ div {
 }
 .map-container {
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(49, 24, 24, 0.4);
 }
 
 .map-wrapper {
   height: 80vh;
   width: 80vw;
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 0 2px rgb(255 255 255);
 }
 
 .map-card-controls {
