--- a/client/src/App.css
+++ b/client/src/App.css
@@ -269,17 +269,17 @@ div {
   position: absolute;
   top: 50%;
   left: 50%;
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-40%);
+  -webkit-transform: translateX(-50%) translateY(-40%);
+  transform: translateX(-50%) translateY(-40%);
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(49, 24, 24, 0.4);
 }
 
 .map-wrapper {
-  height: 80vh;
-  width: 80vw;
+  width: 75vw;
   box-shadow: 0 0 0 2px rgb(255 255 255);
+  height: calc(75vh - 60px);
 }
 
 .map-card-controls {
