--- a/client/src/Header.css
+++ b/client/src/Header.css
@@ -3,7 +3,7 @@
   top: 0;
   z-index: 1;
   width: 100%;
-  background-color: rgba(21, 21, 21, 50%);
+  background-color: rgb(234 67 53);
 }
 
 .navbar {
