--- a/client/src/App.css
+++ b/client/src/App.css
@@ -193,7 +193,7 @@ body {
 }
 
 input {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   padding-right: 3.65rem;
   box-sizing: border-box;
