--- a/client/src/App.css
+++ b/client/src/App.css
@@ -126,7 +126,7 @@ body {
 
 .modal {
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   padding-top: 5vh;
   left: 0;
   top: 0;
@@ -134,6 +134,10 @@ body {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal.cal-modal{
+  text-align: left;
 }
 
 .modal-content {
@@ -192,12 +196,22 @@ body {
   padding-left: 15px;
 }
 
-input {
+.search-inputs input {
   height: 100%;
   width: 100%;
   padding-right: 3.65rem;
   box-sizing: border-box;
 }
+#root > div > div:nth-child(3) > form > div:nth-child(1) > input{
+  height: 3.2rem;
+}
+
+.submit-btn-container{
+  height: 3.2rem;
+}
+/* #root > div > div:nth-child(3) > form > div.search-inputs.shadow.center.p-10.mt-20{
+  height: 3.2rem;
+} */
 
 .lg-input .icon {
   position: absolute;
@@ -322,4 +336,39 @@ div {
 
 .selected-shift {
   background: #00ff2a!important;
+}
+
+.greyed-shift{
+  background: #EBEBE4!important;
+}
+
+/* .shifty{
+  background: silver;
+  border-radius: "0px";
+  color:black;
+  border-left:"8px solid green";
+  border-top: "1px solid navy";
+  border-right: "5px solid yellow";
+  border-bottom: "1px solid purple";
+} */
+
+
+input[type="number"] {
+  width: 100px;
+}
+
+input + span {
+  padding-right: 30px;
+}
+
+input:invalid+span:after {
+  position: absolute;
+  content: '✖';
+  padding-left: 5px;
+}
+
+input:valid+span:after {
+  position: absolute;
+  content: '✓';
+  padding-left: 5px;
 }
