--- a/client/src/App.css
+++ b/client/src/App.css
@@ -372,3 +372,7 @@ input:valid+span:after {
   content: '✓';
   padding-left: 5px;
 }
+
+#root > div > div:nth-child(2) > div > div > div.css-1n81ws8-ValueContainer > div {
+  width:max-content!important;
+}
