--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,10 @@
   padding: 0px;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -383,4 +387,73 @@ input:valid+span:after {
 }
 .rbc-time-view .rbc-header {
   border-bottom: none;
+}
+
+
+/* Map styles */
+
+.thumbnail{
+  /* border: 2px solid rgb(204, 204, 204); */
+
+}
+
+.window-btn{
+  display: block;
+  margin-top: 5px;
+}
+
+.window-overlay{
+  background: #ffffff;
+    border: 1px solid rgb(204, 204, 204);
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+    width: 160px;
+    box-shadow:  0.3em 0.3em 1em rgb(49 24 24 / 20%);
+}
+
+
+.header {
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: center;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+}
+
+.column.side {
+  width: 30%;
+}
+
+.column.middle {
+  width: 70%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column.side,
+  .column.middle {
+    width: 100%;
+  }
+}
+
+.multi-map-container {
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(49, 24, 24, 0.4);
+}
+
+.multi-map-wrapper {
+  width: 100%;
+  box-shadow: 0 0 0 2px rgb(255 255 255);
+  height: calc(100vh - 145px);
 }
