--- a/client/src/App.css
+++ b/client/src/App.css
@@ -457,3 +457,19 @@ input:valid+span:after {
   box-shadow: 0 0 0 2px rgb(255 255 255);
   height: calc(100vh - 145px);
 }
+
+.tall-tester{
+  height: 400px;
+  background: grey;
+  border-radius: 2px;
+  color: black;
+  margin: 2px;
+}
+
+
+.column.side{
+  width: 30%;
+  float: left;
+  overflow-y: auto;
+  height: calc(100vh - 135px);
+}
