--- a/client/src/App.css
+++ b/client/src/App.css
@@ -472,6 +472,7 @@ input:valid+span:after {
   float: left;
   overflow-y: auto;
   height: calc(100vh - 135px);
+  background-color: #4a90e2;
 }
 
 
@@ -486,4 +487,134 @@ input:valid+span:after {
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 16px;
+}
+
+
+.button-component{
+  padding: 5px 10px;
+  border-radius: 16px;
+  border: 1px solid silver;
+  box-shadow:  0 4px 5px rgba(32, 9, 9, 0.4); 
+  transition: 0.2s all cubic-bezier(0,1.5,1,1.5);
+}
+.button-component:active {
+  transform: scale(1.2);
+  border: 3px solid white;
+
+  box-shadow: 3px 2px 22px 1px rgba(89, 230, 136, 0.24);
+  background-color: rgb(27, 34, 39);
+  color:white;
+  font-weight: bold;
+}
+
+
+/* cards styles on navmap */
+
+
+.container {
+  margin-bottom: 20px;
+}
+
+.example {
+  display: inline-block;
+  width: 90%;
+  vertical-align: text-top;
+}
+.example:last-child {
+  margin-right: 0;
+}
+
+/* Card Styles */
+.card {
+  background-color: #ffffff;
+  text-align: left;
+  border-radius: 4px;
+  overflow: hidden;
+}
+.card__body {
+  padding: 16px 0;
+}
+.card__primary-title {
+  padding: 8px 16px;
+}
+.card__primary-title h1, .card__primary-title h2, .card__primary-title h3, .card__primary-title h4, .card__primary-title h5, .card__primary-title h6 {
+  margin: 0;
+}
+.card__supporting-text {
+  padding: 8px 16px;
+}
+.card__actions {
+  padding: 8px;
+}
+
+.bg--deep-purple {
+  color: #ffffff;
+  background-color: #673ab7;
+}
+
+.text-normal {
+  font-weight: normal;
+}
+.text-bold {
+  font-weight: bold;
+}
+.text-secondary {
+  color: #9e9e9e;
+}
+.text-small {
+  font-size: 14px;
+}
+.text-medium {
+  font-size: 16px;
+}
+.text-large {
+  font-size: 24px;
+}
+
+.item {
+  display: inline-block;
+  margin-top: 8px;
+  max-height: 72px;
+  vertical-align: middle;
+}
+.image {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+.image--avatar {
+  display: inline-block;
+  margin-right: 16px;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+.image img {
+  display: inline-block;
+  width: 100%;
+  height: auto;
+  vertical-align: middle;
+  border: none;
+}
+
+.btn {
+  display: inline-block;
+  padding: 8px;
+  color: inherit;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: left;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.btn--icon {
+  transition: color 0.3s;
+}
+.btn--icon:hover {
+  color: #9e9e9e;
+}
+
+.depth--two {
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.23), 0 3px 12px rgba(0, 0, 0, 0.16);
 }
