--- a/client/src/App.css
+++ b/client/src/App.css
@@ -283,55 +283,6 @@ div {
 .buisness-cal-title {
   margin-bottom: 10px;
 }
-.map-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -moz-transform: translateX(-50%) translateY(-40%);
-  -webkit-transform: translateX(-50%) translateY(-40%);
-  transform: translateX(-50%) translateY(-40%);
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(49, 24, 24, 0.4);
-}
-
-.map-wrapper {
-  width: 75vw;
-  box-shadow: 0 0 0 2px rgb(255 255 255);
-  height: calc(75vh - 60px);
-}
-
-.map-card-controls {
-  display: flex;
-  justify-content: space-between;
-  padding: 0.8em;
-  background: #e8e8e8ab;
-}
-
-.map-controls {
-  background: none padding-box rgb(255, 255, 255);
-  display: table-cell;
-  border: 0px;
-  margin: 0px;
-  padding: 0px 23px;
-  text-transform: none;
-  appearance: none;
-  position: relative;
-  cursor: pointer;
-  user-select: none;
-  direction: ltr;
-  overflow: hidden;
-  text-align: center;
-  height: 40px;
-  vertical-align: middle;
-  color: rgb(0, 0, 0);
-  font-family: Roboto, Arial, sans-serif;
-  font-size: 18px;
-  border-bottom-left-radius: 2px;
-  border-top-left-radius: 2px;
-  box-shadow: rgb(0 0 0 / 30%) 0px 1px 4px -1px;
-  min-width: 36px;
-  font-weight: 500;
-}
 
 .cal-buisness-details {
   position: relative;
@@ -618,3 +569,153 @@ input:valid+span:after {
 .depth--two {
   box-shadow: 0 3px 12px rgba(0, 0, 0, 0.23), 0 3px 12px rgba(0, 0, 0, 0.16);
 }
+
+
+
+.Badge {
+  align-items: center;
+  background: #ce2c6c;
+  border: 2px solid #fff;
+  border-radius: 99em;
+  color: #fff;
+  display: flex;
+  font-size: 0.77em;
+  font-weight: 400;
+  height: 1.44em;
+  justify-content: center;
+  line-height: 1;
+  min-width: 1.44em;
+  position: absolute;
+  right: -2px;
+  top: -2px;
+}
+
+
+.u-hiddenVisually {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+}
+
+.DayPickerInput input{
+  border: 0px;
+    padding: 0px 17px;
+    text-transform: none;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+    direction: ltr;
+    overflow: hidden;
+    height: 40px;
+    vertical-align: middle;
+    color: rgb(86, 86, 86);
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 18px;
+     box-shadow: rgb(0 0 0 / 30%) 0px 1px 4px -1px;
+    min-width: 66px;
+}
+
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: yellow;
+}
+
+
+/* day plan page css start */
+.col{
+  /* padding: 10px; */
+}
+
+.map-wrapper {
+  box-shadow: 0 0 0 2px rgb(255 255 255);
+  height: calc(75vh - 60px);
+}
+
+.map-container {
+  width: 100%;
+  margin: 0 auto;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(49, 24, 24, 0.4);
+}
+
+.map-card-controls {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.8em;
+  background: #e8e8e8ab;
+}
+
+.map-controls {
+  background: none padding-box rgb(255, 255, 255);
+  display: table-cell;
+  border: 0px;
+  margin: 0px;
+  padding: 0px 23px;
+  text-transform: none;
+  appearance: none;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  direction: ltr;
+  overflow: hidden;
+  text-align: center;
+  height: 40px;
+  vertical-align: middle;
+  color: rgb(0, 0, 0);
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 18px;
+  border-bottom-left-radius: 2px;
+  border-top-left-radius: 2px;
+  box-shadow: rgb(0 0 0 / 30%) 0px 1px 4px -1px;
+  min-width: 36px;
+  font-weight: 500;
+}
+
+
+.col-right{
+  width: 40%;
+  float: right;
+  /* overflow-y: auto; */
+  /* height: calc(100vh - 135px); */
+  background-color: #4a90e2;
+}
+
+.col-left{
+  width: 60%;
+  float: left;
+}
+
+
+/* 
+.column {
+  float: left;
+  padding: 10px;
+}
+
+.column.side {
+  width: 30%;
+}
+
+.column.middle {
+  width: 70%;
+}
+
+.column.side{
+  width: 30%;
+  float: left;
+  overflow-y: auto;
+  height: calc(100vh - 135px);
+  background-color: #4a90e2;
+}
+
+@media screen and (max-width: 600px) {
+  .column.side,
+  .column.middle {
+    width: 100%;
+  }
+} */
+/* day plan page css end */
