--- a/client/src/PlanPage.css
+++ b/client/src/PlanPage.css
@@ -50,13 +50,11 @@
 .plan-col-right {
   width: 40%;
   float: right;
-  background-color: #ffffff;
-  border-left: 1px solid white;
 }
 
 .plan-directions-container {
   overflow-y: auto;
-  height: calc(100vh - 135px);
+  height: calc(100vh - 5px);
 }
 
 .fadedScroller_fade {
@@ -67,8 +65,8 @@
   );
   position: relative;
   width: 100%;
-  height: 25px;
-  bottom: 23px;
+  height: 5px;
+  bottom: 5px;
 }
 
 .col-left {
@@ -300,6 +298,12 @@ input[class="transit"]:focus + svg {
   background: grey;
   padding: 10px;
   display: flex;
+  justify-content: space-between;
+}
+
+input[type="radio"]:disabled + svg {
+  fill: rgb(229 229 229);
+  opacity: 0.3;
 }
 
 /* top container contains links controls*/
@@ -315,7 +319,7 @@ input[class="transit"]:focus + svg {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  padding: 2px 8px;
+  padding: 2px 0px;
   -webkit-overflow-scrolling: touch;
   position: relative;
   overflow: hidden;
@@ -347,6 +351,8 @@ input[class="transit"]:focus + svg {
   margin: 2px;
   min-width: 0;
   box-sizing: border-box;
+  box-shadow: rgb(50 50 93 / 25%) 0px 13px 27px -5px,
+    rgb(0 0 0 / 30%) 0px 8px 16px -8px;
 }
 
 .css-12jo7m5 {
@@ -391,4 +397,104 @@ div[role="button"] {
 div[role="button"]:hover {
   background-color: #e7370a;
   color: white;
+}
+
+/* reset button */
+.pure-material-button-text {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 4px;
+  padding: 0 8px;
+  min-width: 64px;
+  height: 36px;
+  vertical-align: middle;
+  text-align: center;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  color: rgb(var(--pure-material-primary-rgb, 255, 255, 255));
+  background-color: transparent;
+  font-family: var(
+    --pure-material-font,
+    "Roboto",
+    "Segoe UI",
+    BlinkMacSystemFont,
+    system-ui,
+    -apple-system
+  );
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 36px;
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+}
+
+.pure-material-button-text::-moz-focus-inner {
+  border: none;
+}
+
+/* Overlay */
+.pure-material-button-text::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: currentColor;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+/* Ripple */
+.pure-material-button-text::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  border-radius: 50%;
+  padding: 50%;
+  width: 32px;
+  height: 32px;
+  background-color: currentColor;
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(1);
+  transition: opacity 1s, transform 0.5s;
+}
+
+/* Hover, Focus */
+.pure-material-button-text:hover::before {
+  opacity: 0.04;
+}
+
+.pure-material-button-text:focus::before {
+  opacity: 0.12;
+}
+
+.pure-material-button-text:hover:focus::before {
+  opacity: 0.16;
+}
+
+/* Active */
+.pure-material-button-text:active::after {
+  opacity: 0.16;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0s;
+}
+
+/* Disabled */
+.pure-material-button-text:disabled {
+  color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
+  background-color: transparent;
+  cursor: initial;
+}
+
+.pure-material-button-text:disabled::before {
+  opacity: 0;
+}
+
+.pure-material-button-text:disabled::after {
+  opacity: 0;
 }
