--- a/client/src/PlanPage.css
+++ b/client/src/PlanPage.css
@@ -5,20 +5,21 @@
 
 .map-wrapper {
   box-shadow: 0 0 0 2px rgb(255 255 255);
-  height: calc(75vh - 60px);
+  height: calc(100vh - 180px);
 }
 
 .plan-map-container {
   margin: 0 auto;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(49, 24, 24, 0.4);
+  margin-right: 4px;
 }
 
 .map-card-controls {
   display: flex;
   justify-content: space-between;
   padding: 0.8em;
-  background: #e8e8e8ab;
+  background: #d3d3d3;
 }
 
 .map-controls {
@@ -47,6 +48,12 @@
   font-weight: 500;
 }
 
+.plan-next-btn {
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
 .plan-col-right {
   width: 40%;
   float: right;
@@ -156,6 +163,7 @@ html {
 
 .plan-top-card {
   background: grey;
+  cursor: pointer;
 }
 
 table.adp-directions {
@@ -294,6 +302,11 @@ input[class="transit"]:focus + svg {
   fill: rgb(212, 58, 58);
 }
 
+.font-big {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
 .bg-grey-plan-controls {
   background: grey;
   padding: 10px;
@@ -304,6 +317,9 @@ input[class="transit"]:focus + svg {
 input[type="radio"]:disabled + svg {
   fill: rgb(229 229 229);
   opacity: 0.3;
+}
+button.map-controls:disabled {
+  opacity: 0.4;
 }
 
 /* top container contains links controls*/
@@ -388,6 +404,15 @@ input[type="radio"]:disabled + svg {
   line-height: 1;
   stroke: currentColor;
   stroke-width: 0;
+}
+
+div[role="button"].css-xb97g8 {
+  transition-duration: 0.4s;
+}
+
+div[role="button"].css-xb97g8:hover {
+  background-color: #e7370a;
+  color: white;
 }
 
 /* reset button */
@@ -488,4 +513,33 @@ input[type="radio"]:disabled + svg {
 
 .pure-material-button-text:disabled::after {
   opacity: 0;
+}
+
+a {
+  outline: none;
+  text-decoration: none;
+  padding: 2px 1px 0;
+}
+
+a:link {
+  color: #265301;
+}
+
+a:visited {
+  color: #437a16;
+}
+
+a:focus {
+  border-bottom: 1px solid;
+  background: #bae498;
+}
+
+a:hover {
+  border-bottom: 1px solid;
+  background: #cdfeaa;
+}
+
+a:active {
+  background: #265301;
+  color: #cdfeaa;
 }
