--- a/client/src/PlanPage.css
+++ b/client/src/PlanPage.css
@@ -620,6 +620,11 @@ a.pill:active {
 /* end drag styles */
 
 /* cellphone responsive layout 576 px and under */
+@media screen and (min-width: 576px) {
+  button.small-ui {
+    display: none;
+  }
+}
 
 @media screen and (max-width: 576px) {
   .col-left {
@@ -647,3 +652,24 @@ a.pill:active {
 }
 
 /* end cellphone responsive layout */
+
+.arrow-icon {
+  /* transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8); */
+  /* position: absolute;
+  right: 0px; */
+}
+
+/* .open-arrow {
+  transform: rotate(-180deg);
+} */
+
+.show-messages {
+  max-height: 100%;
+  overflow: visible;
+}
+
+.show-messages.hidden-message {
+  max-height: 0%;
+  transition: height 2s ease-in;
+  overflow: hidden;
+}
