open close directions map resize animation

--- a/client/src/PlanPage.css
+++ b/client/src/PlanPage.css
@@ -20,8 +20,8 @@
 }
 
 .map-wrapper {
+  transition: 0.5s all;
   box-shadow: 0 0 0 2px rgb(255 255 255);
-  height: calc(100vh - 170px);
 }
 
 .plan-map-container {
@@ -74,9 +74,14 @@
 .plan-directions-container {
   overflow-y: auto;
   height: calc(100vh - 90px);
+  transition: all 0.4s;
+  /* border-bottom: 10px solid lightgrey; */
 }
 
-.fadedScroller_fade {
+.plan-inner-container {
+  box-shadow: 0 4px 2px -2px lightgrey;
+}
+/* .fadedScroller_fade {
   background: linear-gradient(
     to top,
     rgba(251, 251, 251, 1) 0%,
@@ -86,7 +91,7 @@
   width: 100%;
   height: 5px;
   bottom: 5px;
-}
+} */
 
 .hidden {
   display: none;
@@ -379,7 +384,7 @@ button.map-controls:disabled {
   flex: 1 1;
   flex-wrap: wrap;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   box-sizing: border-box;
   position: absolute;
   bottom: 0;
@@ -571,6 +576,7 @@ a.pill {
 
 a.pill:link {
   color: #265301;
+  font-size: 1.1em;
 }
 
 a.pill:visited {
@@ -645,31 +651,46 @@ a.pill:active {
   }
   .plan-directions-container {
     height: 100%;
+    padding-bottom: 10px;
   }
   .side-p-10 {
     padding-bottom: 10px;
   }
+
+  .map-controls {
+    padding: 0px 17px;
+  }
+  .map-link-text-hide {
+    display: none;
+  }
 }
 
 /* end cellphone responsive layout */
-
+/*
 .arrow-icon {
-  /* transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8); */
-  /* position: absolute;
-  right: 0px; */
-}
+   transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8); */
+/* position: absolute;
+  right: 0px; 
+}*/
 
 /* .open-arrow {
   transform: rotate(-180deg);
 } */
 
-.show-messages {
-  max-height: 100%;
-  overflow: visible;
+@media screen and (min-width: 800px) {
+  .map-destination-links-container {
+    position: relative;
+  }
 }
 
-.show-messages.hidden-message {
-  max-height: 0%;
-  transition: height 2s ease-in;
-  overflow: hidden;
+.no-bottom-pad {
+  padding-bottom: 0px;
+}
+
+.closed-map-control-size {
+  height: calc(100vh - 235px);
+}
+
+.open-map-control-size {
+  height: calc(100vh - 168px);
 }
